// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ember-octane-migration-status-task detects octane migration status for non-octane addon and outputs to json 1`] = `
Array [
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/components/my-component.js",
          },
          "region": Object {
            "endColumn": 25,
            "endLine": 2,
            "startColumn": 16,
            "startLine": 2,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Glimmer Components : Use Glimmer components over classic Ember Components. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-properties__js-boilerplate",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Glimmer Components",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/components/my-component.js",
          },
          "region": Object {
            "endColumn": 11,
            "endLine": 20,
            "startColumn": 24,
            "startLine": 6,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Native Classes : Use native JS classes to extend the built-in classes provided by Ember. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-properties__js-boilerplate",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Native Classes",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/components/my-component.js",
          },
          "region": Object {
            "endColumn": 11,
            "endLine": 20,
            "startColumn": 24,
            "startLine": 6,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Tagless Components : Use tagless components to avoid unnecessary outer element wrapping. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-templates__tag-name",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Tagless Components",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/components/my-component.js",
          },
          "region": Object {
            "endColumn": 27,
            "endLine": 9,
            "startColumn": 11,
            "startLine": 9,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Glimmer Components : Do not use \\"classic\\" Ember component lifecycle hooks.. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-lifecycle",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Glimmer Components",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/components/my-component.js",
          },
          "region": Object {
            "endColumn": 44,
            "endLine": 10,
            "startColumn": 24,
            "startLine": 10,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Native Classes : Use native ES5 getters instead of \`get\` / \`getProperties\` on Ember objects. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-properties__get-and-set",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Native Classes",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/components/my-component.js",
          },
          "region": Object {
            "endColumn": 12,
            "endLine": 19,
            "startColumn": 11,
            "startLine": 15,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Native Classes : Do not use the actions hash and {{action}} modifier and helper. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#actions__actions",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Native Classes",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/components/other-component.js",
          },
          "region": Object {
            "endColumn": 25,
            "endLine": 2,
            "startColumn": 16,
            "startLine": 2,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Glimmer Components : Use Glimmer components over classic Ember Components. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-properties__js-boilerplate",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Glimmer Components",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/components/other-component.js",
          },
          "region": Object {
            "endColumn": 11,
            "endLine": 20,
            "startColumn": 24,
            "startLine": 6,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Native Classes : Use native JS classes to extend the built-in classes provided by Ember. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-properties__js-boilerplate",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Native Classes",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/components/other-component.js",
          },
          "region": Object {
            "endColumn": 11,
            "endLine": 20,
            "startColumn": 24,
            "startLine": 6,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Tagless Components : Use tagless components to avoid unnecessary outer element wrapping. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-templates__tag-name",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Tagless Components",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/components/other-component.js",
          },
          "region": Object {
            "endColumn": 27,
            "endLine": 9,
            "startColumn": 11,
            "startLine": 9,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Glimmer Components : Do not use \\"classic\\" Ember component lifecycle hooks.. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-lifecycle",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Glimmer Components",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/components/other-component.js",
          },
          "region": Object {
            "endColumn": 44,
            "endLine": 10,
            "startColumn": 24,
            "startLine": 10,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Native Classes : Use native ES5 getters instead of \`get\` / \`getProperties\` on Ember objects. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-properties__get-and-set",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Native Classes",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/components/other-component.js",
          },
          "region": Object {
            "endColumn": 12,
            "endLine": 19,
            "startColumn": 11,
            "startLine": 15,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Native Classes : Do not use the actions hash and {{action}} modifier and helper. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#actions__actions",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Native Classes",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/routes/my-route.js",
          },
          "region": Object {
            "endColumn": 11,
            "endLine": 5,
            "startColumn": 24,
            "startLine": 4,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Native Classes : Use native JS classes to extend the built-in classes provided by Ember. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-properties__js-boilerplate",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Native Classes",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/services/my-service.js",
          },
          "region": Object {
            "endColumn": 11,
            "endLine": 10,
            "startColumn": 24,
            "startLine": 4,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Native Classes : Use native JS classes to extend the built-in classes provided by Ember. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-properties__js-boilerplate",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Native Classes",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/services/my-service.js",
          },
          "region": Object {
            "endColumn": 40,
            "endLine": 8,
            "startColumn": 25,
            "startLine": 8,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Native Classes : Use native ES5 getters instead of \`get\` / \`getProperties\` on Ember objects. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-properties__get-and-set",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Native Classes",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/templates/application.hbs",
          },
          "region": Object {
            "endColumn": 10,
            "endLine": 2,
            "startColumn": 10,
            "startLine": 2,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Angle Bracket Syntax : Use angle bracket syntax as it improves readability of templates, i.e. disambiguates components from helpers. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-templates__angle-brackets",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Angle Bracket Syntax",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/templates/application.hbs",
          },
          "region": Object {
            "endColumn": 10,
            "endLine": 3,
            "startColumn": 10,
            "startLine": 3,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Angle Bracket Syntax : Use angle bracket syntax as it improves readability of templates, i.e. disambiguates components from helpers. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-templates__angle-brackets",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Angle Bracket Syntax",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/templates/application.hbs",
          },
          "region": Object {
            "endColumn": 33,
            "endLine": 2,
            "startColumn": 33,
            "startLine": 2,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Own Properties : Use \`this\` when referring to properties owned by the component. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-templates__template-this",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Own Properties",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/templates/application.hbs",
          },
          "region": Object {
            "endColumn": 39,
            "endLine": 3,
            "startColumn": 39,
            "startLine": 3,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Own Properties : Use \`this\` when referring to properties owned by the component. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-templates__template-this",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Own Properties",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/templates/my-component.hbs",
          },
          "region": Object {
            "endColumn": 18,
            "endLine": 2,
            "startColumn": 18,
            "startLine": 2,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Modifiers : Do not use \`action\`. Instead, use the \`on\` modifier and \`fn\` helper. More info: https://guides.emberjs.com/release/components/template-lifecycle-dom-and-modifiers",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Modifiers",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/templates/my-component.hbs",
          },
          "region": Object {
            "endColumn": 10,
            "endLine": 3,
            "startColumn": 10,
            "startLine": 3,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Angle Bracket Syntax : Use angle bracket syntax as it improves readability of templates, i.e. disambiguates components from helpers. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-templates__angle-brackets",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Angle Bracket Syntax",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/templates/my-component.hbs",
          },
          "region": Object {
            "endColumn": 12,
            "endLine": 3,
            "startColumn": 12,
            "startLine": 3,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Own Properties : Use \`this\` when referring to properties owned by the component. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-templates__template-this",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Own Properties",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/templates/other-component.hbs",
          },
          "region": Object {
            "endColumn": 10,
            "endLine": 2,
            "startColumn": 10,
            "startLine": 2,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Angle Bracket Syntax : Use angle bracket syntax as it improves readability of templates, i.e. disambiguates components from helpers. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-templates__angle-brackets",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Angle Bracket Syntax",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/templates/other-component.hbs",
          },
          "region": Object {
            "endColumn": 12,
            "endLine": 2,
            "startColumn": 12,
            "startLine": 2,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Own Properties : Use \`this\` when referring to properties owned by the component. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-templates__template-this",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Own Properties",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
]
`;

exports[`ember-octane-migration-status-task detects octane migration status for non-octane app and outputs to json 1`] = `
Array [
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/components/my-component.js",
          },
          "region": Object {
            "endColumn": 25,
            "endLine": 2,
            "startColumn": 16,
            "startLine": 2,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Glimmer Components : Use Glimmer components over classic Ember Components. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-properties__js-boilerplate",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Glimmer Components",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/components/my-component.js",
          },
          "region": Object {
            "endColumn": 11,
            "endLine": 20,
            "startColumn": 24,
            "startLine": 6,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Native Classes : Use native JS classes to extend the built-in classes provided by Ember. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-properties__js-boilerplate",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Native Classes",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/components/my-component.js",
          },
          "region": Object {
            "endColumn": 11,
            "endLine": 20,
            "startColumn": 24,
            "startLine": 6,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Tagless Components : Use tagless components to avoid unnecessary outer element wrapping. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-templates__tag-name",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Tagless Components",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/components/my-component.js",
          },
          "region": Object {
            "endColumn": 27,
            "endLine": 9,
            "startColumn": 11,
            "startLine": 9,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Glimmer Components : Do not use \\"classic\\" Ember component lifecycle hooks.. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-lifecycle",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Glimmer Components",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/components/my-component.js",
          },
          "region": Object {
            "endColumn": 44,
            "endLine": 10,
            "startColumn": 24,
            "startLine": 10,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Native Classes : Use native ES5 getters instead of \`get\` / \`getProperties\` on Ember objects. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-properties__get-and-set",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Native Classes",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/components/my-component.js",
          },
          "region": Object {
            "endColumn": 12,
            "endLine": 19,
            "startColumn": 11,
            "startLine": 15,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Native Classes : Do not use the actions hash and {{action}} modifier and helper. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#actions__actions",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Native Classes",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/components/other-component.js",
          },
          "region": Object {
            "endColumn": 25,
            "endLine": 2,
            "startColumn": 16,
            "startLine": 2,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Glimmer Components : Use Glimmer components over classic Ember Components. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-properties__js-boilerplate",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Glimmer Components",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/components/other-component.js",
          },
          "region": Object {
            "endColumn": 11,
            "endLine": 20,
            "startColumn": 24,
            "startLine": 6,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Native Classes : Use native JS classes to extend the built-in classes provided by Ember. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-properties__js-boilerplate",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Native Classes",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/components/other-component.js",
          },
          "region": Object {
            "endColumn": 11,
            "endLine": 20,
            "startColumn": 24,
            "startLine": 6,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Tagless Components : Use tagless components to avoid unnecessary outer element wrapping. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-templates__tag-name",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Tagless Components",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/components/other-component.js",
          },
          "region": Object {
            "endColumn": 27,
            "endLine": 9,
            "startColumn": 11,
            "startLine": 9,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Glimmer Components : Do not use \\"classic\\" Ember component lifecycle hooks.. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-lifecycle",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Glimmer Components",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/components/other-component.js",
          },
          "region": Object {
            "endColumn": 44,
            "endLine": 10,
            "startColumn": 24,
            "startLine": 10,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Native Classes : Use native ES5 getters instead of \`get\` / \`getProperties\` on Ember objects. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-properties__get-and-set",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Native Classes",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/components/other-component.js",
          },
          "region": Object {
            "endColumn": 12,
            "endLine": 19,
            "startColumn": 11,
            "startLine": 15,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Native Classes : Do not use the actions hash and {{action}} modifier and helper. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#actions__actions",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Native Classes",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/routes/my-route.js",
          },
          "region": Object {
            "endColumn": 11,
            "endLine": 5,
            "startColumn": 24,
            "startLine": 4,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Native Classes : Use native JS classes to extend the built-in classes provided by Ember. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-properties__js-boilerplate",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Native Classes",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/services/my-service.js",
          },
          "region": Object {
            "endColumn": 11,
            "endLine": 10,
            "startColumn": 24,
            "startLine": 4,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Native Classes : Use native JS classes to extend the built-in classes provided by Ember. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-properties__js-boilerplate",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Native Classes",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/services/my-service.js",
          },
          "region": Object {
            "endColumn": 40,
            "endLine": 8,
            "startColumn": 25,
            "startLine": 8,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Native Classes : Use native ES5 getters instead of \`get\` / \`getProperties\` on Ember objects. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-properties__get-and-set",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Native Classes",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/templates/application.hbs",
          },
          "region": Object {
            "endColumn": 10,
            "endLine": 2,
            "startColumn": 10,
            "startLine": 2,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Angle Bracket Syntax : Use angle bracket syntax as it improves readability of templates, i.e. disambiguates components from helpers. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-templates__angle-brackets",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Angle Bracket Syntax",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/templates/application.hbs",
          },
          "region": Object {
            "endColumn": 10,
            "endLine": 3,
            "startColumn": 10,
            "startLine": 3,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Angle Bracket Syntax : Use angle bracket syntax as it improves readability of templates, i.e. disambiguates components from helpers. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-templates__angle-brackets",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Angle Bracket Syntax",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/templates/application.hbs",
          },
          "region": Object {
            "endColumn": 33,
            "endLine": 2,
            "startColumn": 33,
            "startLine": 2,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Own Properties : Use \`this\` when referring to properties owned by the component. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-templates__template-this",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Own Properties",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/templates/application.hbs",
          },
          "region": Object {
            "endColumn": 39,
            "endLine": 3,
            "startColumn": 39,
            "startLine": 3,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Own Properties : Use \`this\` when referring to properties owned by the component. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-templates__template-this",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Own Properties",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/templates/my-component.hbs",
          },
          "region": Object {
            "endColumn": 18,
            "endLine": 2,
            "startColumn": 18,
            "startLine": 2,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Modifiers : Do not use \`action\`. Instead, use the \`on\` modifier and \`fn\` helper. More info: https://guides.emberjs.com/release/components/template-lifecycle-dom-and-modifiers",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Modifiers",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/templates/my-component.hbs",
          },
          "region": Object {
            "endColumn": 10,
            "endLine": 3,
            "startColumn": 10,
            "startLine": 3,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Angle Bracket Syntax : Use angle bracket syntax as it improves readability of templates, i.e. disambiguates components from helpers. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-templates__angle-brackets",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Angle Bracket Syntax",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/templates/my-component.hbs",
          },
          "region": Object {
            "endColumn": 12,
            "endLine": 3,
            "startColumn": 12,
            "startLine": 3,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Own Properties : Use \`this\` when referring to properties owned by the component. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-templates__template-this",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Own Properties",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/templates/other-component.hbs",
          },
          "region": Object {
            "endColumn": 10,
            "endLine": 2,
            "startColumn": 10,
            "startLine": 2,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Angle Bracket Syntax : Use angle bracket syntax as it improves readability of templates, i.e. disambiguates components from helpers. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-templates__angle-brackets",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Angle Bracket Syntax",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
  Object {
    "kind": "review",
    "level": "warning",
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/templates/other-component.hbs",
          },
          "region": Object {
            "endColumn": 12,
            "endLine": 2,
            "startColumn": 12,
            "startLine": 2,
          },
        },
      },
    ],
    "message": Object {
      "text": "Octane | Own Properties : Use \`this\` when referring to properties owned by the component. More info: https://ember-learn.github.io/ember-octane-vs-classic-cheat-sheet/#component-templates__template-this",
    },
    "properties": Object {
      "migration": Object {
        "displayName": "Ember Octane Migration",
        "feature": "Own Properties",
        "name": "ember-octane-migration",
      },
    },
    "ruleId": "ember-octane-migration-status",
    "ruleIndex": 0,
  },
]
`;

exports[`ember-octane-migration-status-task detects octane migration status for octane addon and outputs to json 1`] = `Array []`;

exports[`ember-octane-migration-status-task detects octane migration status for octane app and outputs to json 1`] = `Array []`;
